--- a/president.html
+++ b/president.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>This file is president.html</title>
-</head>
+ <head>
+     <title>president.html</title>
+ </head>
 <body>
-
-<h2>President guess by Malayaja</h2>
+<h1>President guess by Sai Krishna Gadde</h1>
+<h2>Getting input</h2>
 
 <form>
     <label for="form1_pre_name">Enter the secret president name</label>
@@ -43,7 +43,7 @@ function checkGuess (){
 
 <label>Image changes on click</label><br>
     <div class="container">
-        <img src="Vadodara.jpg" class="rounded" id="image" style="height: 100px;width: 100px;" onclick="swapImage()">
+        <img src="dove.jpg" class="rounded" id="image" alt="Avocet" style="height: 100px;width: 100px;" onclick="swapImage()">
     </div>
 
     <script>
@@ -51,15 +51,15 @@ function checkGuess (){
         function swapImage() {
             switch (useImage) {
                 case 1:
-                    document.getElementById("image").src = "Abbotts blabber.jpg";
+                    document.getElementById("image").src = "vanga.jpg";
                     useImage = 2;
                     break;
                 case 2:
-                    document.getElementById("image").src = "Abyssinian Woodpecker.jpg";
+                    document.getElementById("image").src = "Red eyed bulbul.jpg";
                     useImage = 3;
                     break;
                 case 3:
-                    document.getElementById("image").src = "Vadodara.jpg";
+                    document.getElementById("image").src = "dove.jpg";
                     useImage = 1;
                     break;
                 default:
@@ -67,6 +67,6 @@ function checkGuess (){
             }
         }
     </script>
-    
+
 </body>
-</html> 
+</html>
